--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body, html {
   margin: 0;
-  padding: 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 2rem 1rem;
   height: 100%;
   font-family: 'Lora', serif;
   color: white;
